[package]
name = "music_iterators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mumuse = "0.5.0"
itertools = "0.10.3"

[[bin]]
name = "up"
path = "src/arpeggiators/up.rs"

[[bin]]
name = "down"
path = "src/arpeggiators/down.rs"
